# webster-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
benches/: access.rs
examples/: basic.rs  benchmark.rs  benchmark_preload.rs  cli.rs
src/: lib.rs
