[package]
name = "webster"
version = "0.1.0"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An offline version of webster's dictionary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"