[package]
name = "webster"
version = "0.2.1"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An offline version of webster's dictionary"
keywords = ["dictionary", "definition", "webster"]
repository = "https://github.com/grantshandy/webster-rs"
documentation = "https://docs.rs/webster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
lazy_static = "1.4.0"